fixed wooden walls burn time